[tool.poetry]
name = "cameratraps-batch-api"
version = "1.0.0"
description = "Microsoft Camera Traps Batch Processing API - Zooniverse version"
authors = ["Zooniverse <contact@zooniverse.org>"]

[tool.poetry.dependencies]
python = "^3.7"
humanfriendly = "^10.0"
requests = "^2.26.0"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
azure-storage-blob = "^12.9.0"
azure-batch = "^11.0.0"
azure-cosmos = "^4.2.0"
azure-appconfiguration = "^1.3.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
